# teditor

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  editor.rs  main.rs  search.rs
src/ui/: editor_view.rs  mod.rs  search_view.rs
